# mini-soc

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  MiniSOC_Training_Plan.md  PRD.md  README.md  __init__.py  blog.md  client.py  docker-compose.yml  inference.py  models.py  openenv.yaml  py.typed  pyproject.toml  requirements.txt  run_agent.py  v2_Plan.md
docs/: API.md
server/: app.py  logging_config.py  mini_soc_environment.py
server/graders/: grader1.py  grader2.py  grader3.py
server/simulator/: attack_seeds.py  log_gen.py
tests/: conftest.py  test_env.py
train/: __init__.py  plot_rewards.py  reward_wrapper.py  test_smoke.py  train_colab.ipynb  train_grpo.py
