[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-soc"
version = "1.0.0"
description = "Mini Security Operations Center (SOC) — OpenEnv RL Environment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["openenv", "reinforcement-learning", "cybersecurity", "soc", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "httpx>=0.27.0",
    "openai>=1.30.1",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.scripts]
mini-soc-server = "server.app:main"

[project.urls]
Repository = "https://github.com/riteshthekid/mini-soc"
Documentation = "https://github.com/riteshthekid/mini-soc/tree/main/docs"

# ---------------------------------------------------------------------------
# Setuptools
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["server*", "tests*"]

[tool.setuptools]
py-modules = ["models", "client"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring a running server",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["server", "models", "client"]
omit = ["tests/*", "inference.py", "run_agent.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "N802",   # function name should be lowercase (test names)
    "SIM108", # use ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["models", "client", "server"]

# ---------------------------------------------------------------------------
# Mypy (type checking)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
